--- a/BugMachine/BugMachine/BugMachine.vcxproj.filters
+++ b/BugMachine/BugMachine/BugMachine.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Frustum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="bsp_plane.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Window.cpp">
@@ -117,6 +120,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Frustum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="bsp_plane.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
